[gd_scene load_steps=4 format=2]

[ext_resource path="res://PropertyConfig/RuleContainer.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.301961, 0.301961, 0.301961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.368627, 0.368627, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )

[node name="RuleContainer" type="PanelContainer"]
anchor_left = -0.000296822
anchor_top = -0.000395762
anchor_right = -0.000296822
anchor_bottom = -0.000395762
margin_top = 38.0
margin_right = 320.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 58.0
custom_constants/separation = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 18.0

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Only visible if..."

[node name="DeleteRuleBtn" type="ToolButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 253.0
margin_right = 304.0
margin_bottom = 18.0
size_flags_horizontal = 10
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Delete"
flat = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 304.0
margin_bottom = 46.0
custom_constants/separation = 4

[node name="RulePropField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 104.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="RuleComparisonField" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 195.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.25
text = "Is"
items = [ "Is", null, false, 0, null, "Is Not", null, false, 1, null ]
selected = 0

[node name="RuleValueField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DeleteRuleBtn" to="." method="_on_DeleteRuleBtn_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/RulePropField" to="." method="_on_RulePropField_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/RuleComparisonField" to="." method="_on_RuleComparisonField_item_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/RuleValueField" to="." method="_on_RuleValueField_text_changed"]
